--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,19 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --ffamily: Inter-Variable;
+    --accent-ffamily: PressStart2P-Regular;
+    --fsize-header-logo: 65px;
+    --fsize-header: 23px;
+    --fsize-button: 14px;
+    --fsize-text: 18px;
+    --fweight: bold;
+    --fweight: regular;
+    --inline-size: 696px;
+    --bg-image: repeating-linear-gradient(to right, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), repeating-linear-gradient(to bottom, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+    --bg-color: white;
+    --text-shadow: #fff;
+    --button-text-color: #fff;
+    --accent-color: #000;
+    --border: 2px solid #000;
+    --primary-white: white;
+}
