--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,6 +14,8 @@
     --text-shadow: #fff;
     --button-text-color: #fff;
     --accent-color: #000;
+    --like-color: #FF0000;
+    --color-transparent: transparent;
     --border: 2px solid #000;
     --primary-white: white;
 }
