--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -6,11 +6,13 @@
   url(./fonts/Inter-Variable.woff2) format('woff2 supports variations'),
   url('../fonts/Inter-Variable.woff2') format('woff2-variations');
     font-display: swap;
+    font-weight: 400 700;
+    font-display: swap;
 }
 
 @font-face {
     font-family: PressStart2P-Regular;
     src: url(./PressStart2P-Regular.woff) format('woff');
-    font-weight: regular;
+    font-weight: normal;
     font-display: swap;
   }
