--- a/styles/style.css
+++ b/styles/style.css
@@ -132,21 +132,9 @@
 .section__like-buttom {
   display: flex;
   justify-content: flex-end;
-  padding: 25px;
-  gap: 5px;
-}
-
-.card__like-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid var(--color-transparent);
-  padding: 0;
-  background-color: var(--color-transparent);
-  cursor: pointer;
-  align-self: center;
-  transition: border-color 0.3s ease;
-  
+  margin: 25px;
+  max-block-size: 39px;
+  gap: 4px;
 }
 
 .button {
@@ -154,8 +142,15 @@
   border: var(--border, 2px solid #000);
   background-color: var(--bg-color, #fff);
   cursor: pointer;
-  padding: 6.5px 35px;
   transition: 0.3s ease;
+}
+
+.card__icon-button {
+  border: 2px solid var(--color-transparent, transparent);
+  background-color: var(--color-transparent, transparent);
+  padding: 1px 0;
+  transition: 0.3s ease;
+  cursor: pointer;
 }
 
 .button__text {
@@ -165,6 +160,11 @@
   z-index: 1;
   color: var(--button-text-color, #fff);
   mix-blend-mode: difference;
+}
+
+.card__like-button {
+  inline-size: 130px;
+  block-size: 38px;
 }
 
 .main-body {
@@ -204,14 +204,14 @@
   transform: scale(1);
 }
 
-.card__like-button:focus {
+.card__icon-button:focus {
   outline: none;
 }
 
-.card__like-button:focus-visible {
+.card__icon-button:focus-visible {
   border: 2px solid var(--accent-color);
-  padding: 3px;
 }
+
 .section__save {
   display: flex;
   flex-direction: column;
@@ -245,37 +245,41 @@
   justify-content: center;
   max-width: clamp(341px, 100%, 357px);
   border: var(--border, 2px solid #000);
-  padding-inline: clamp(30px, calc(30px +(10*((1440px - 100vw) / 1065))), 40px);
-  padding-block: 30px;
-  gap: 30px;
+  padding: 30px;
+  background-color: var(--primary-white);
+}
+
+.modal::backdrop {
+  background: var(--accent-color, #000);
+  opacity: 0.75;
 }
 
 .description-modal {
   display: flex;
-  gap: 20px;
   align-items: center;
+  gap: 19px;
+  margin-bottom: 30px;
 }
 
 .modal__title {
   line-height: 150%;
+  font-family: var(--accent-ffamily, fantasy);
   font-size: var(--fsize-button, 14px);
-  inline-size: clamp(198px, calc(198px +(36*((100vw - 375px) / 1065))), 234px);
   text-transform: uppercase;
+  inline-size: 234px;
 }
 
 .modal svg {
-  block-size: 2.5rem;
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.modal__button {
+  block-size: 38px;
 }
 
 @media (width <= 375px) {
-  .header-logo {
-    font-size: 49px;
-  }
-
-  .title {
-    font-size: var(--fsize-button, 14px);
-  }
-
+  
   .button-save {
       flex-direction: column;
   }
