--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,12 @@
   background-attachment: fixed;
 }
 
+@supports(font-variation-settings: "wght" var(--main-weight)) {
+  .page {
+    font-family: var(--ffamily, monospace); 
+  }
+}
+
 .section {
   display: flex;
   flex-direction: column;
