--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,14 +1,12 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-    --ffamily: Inter-Variable;
+    --ffamily: 'Inter-Variable';
     --accent-ffamily: PressStart2P-Regular;
-    --fsize-header-logo: 65px;
-    --fsize-header: 23px;
+    --fsize-header-logo: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+    --fsize-header: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
     --fsize-button: 14px;
     --fsize-text: 18px;
-    --fweight: bold;
-    --fweight: regular;
-    --inline-size: 696px;
+    --inline-size: min(100vw, 700px);
     --bg-image: repeating-linear-gradient(to right, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), repeating-linear-gradient(to bottom, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
     --bg-color: white;
     --text-shadow: #fff;
