--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,8 +7,7 @@
   url('../fonts/Inter-Variable.woff2') format('woff2-variations');
     font-display: swap;
     font-weight: 400 785;
-    font-variation-settings: "wght" 400;
-    font-variation-settings: "wght" 785;
+    font-variation-settings: "wght" 400 785;
 }
 
 @font-face {
