--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,6 +10,7 @@
     --bg-image: repeating-linear-gradient(to right, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), repeating-linear-gradient(to bottom, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
     --bg-color: white;
     --text-shadow: #fff;
+    --text-shadow-label: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
     --button-text-color: #fff;
     --accent-color: #000;
     --like-color: #FF0000;
