--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,16 +3,15 @@
     font-family: Inter-Variable;
     src:
   local('Inter-Variable'),
-  url(./fonts/Inter-Variable.woff2) format('woff2 supports variations'),
-  url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+  url('Inter-Variable.woff2') format('woff2 supports variations'),
+  url('Inter-Variable.woff2') format('woff2-variations');
     font-display: swap;
     font-weight: 400 785;
-    font-variation-settings: "wght" 400 785;
 }
 
 @font-face {
     font-family: PressStart2P-Regular;
-    src: url(./PressStart2P-Regular.woff) format('woff');
+    src: url(PressStart2P-Regular.woff) format('woff');
     font-weight: normal;
     font-display: swap;
   }
