--- a/styles/style.css
+++ b/styles/style.css
@@ -16,11 +16,12 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--ffamily, monospace);
-  font-size: var(--fsize-text);
+  font-size: var(--fsize-text, 18px);
   padding: 100px 0;
-  background-image: var(--bg-image);
+  background-image: var(--bg-image, repeating-linear-gradient(to right, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), repeating-linear-gradient(to bottom, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a));
   background-size: cover;
   background-attachment: fixed;
+  font-variation-settings: "wght" 400;
 }
 
 .section {
@@ -31,7 +32,7 @@
   margin: auto;
   border: 2px solid black;
   margin-bottom: 50px;
-  background-color: var(--bg-color);
+  background-color: var(--bg-color, #fff);
 }
 
 .header {
@@ -58,30 +59,33 @@
 }
 
 .section__title {
-  font-size: var(--fsize-text);
+  font-size: var(--fsize-text, 18px);
   margin: 5px 10px;
+  font-variation-settings: "wght" 785;
 }
 
 .section__image {
   position: relative;
   block-size: var(--section-inline-size, clamp(375px, 100vw, 700px));
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
 }
 
 .images {
+  display: block;
   object-fit: cover;
   object-position: center;
   inline-size: 100%;
   block-size: 100%;
-  border: 1px solid black;
 }
 
 .section__image-label {
   position: absolute;
+  font-family: var(--accent-ffamily, fantasy);
+  font-size: var(--fsize-button, 14px);
   opacity: 0.5;
-  font-family: var(--accent-ffamily), fantasy;
-  font-size: var(--fsize-button);
   color: black;
-  text-shadow: var(--text-shadow);
+  text-shadow: var(--text-shadow-label, -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff);
   inset-block-start: clamp(23px, calc(23px + (25 - 23) * ((100vw - 375px) / (1440 - 375))), 25px);
   inset-inline-end: clamp(11px, calc(11px + (25 - 11) * ((100vw - 375px) / (1440 - 375))), 25px);
   mix-blend-mode: hard-light;
@@ -148,6 +152,7 @@
 }
 
 .card__icon-button {
+  display: flex;
   border: 2px solid var(--color-transparent, transparent);
   background-color: var(--color-transparent, transparent);
   padding: 1px 0;
@@ -156,8 +161,8 @@
 }
 
 .button__text {
-  font-family: var(--accent-ffamily);
-  font-size: var(--fsize-button);
+  font-family: var(--accent-ffamily, #000);
+  font-size: var(--fsize-button, 14px);
   position: relative;
   z-index: 1;
   color: var(--button-text-color, #fff);
@@ -170,12 +175,12 @@
 }
 
 .main-body {
-  fill: var(--color-transparent);
+  fill: var(--color-transparent, transparent);
   transition: 0.3s linear;
 }
 
 .core {
-  fill: var(--color-transparent);
+  fill: var(--color-transparent, transparent);
   transition: 0.3s 0.03s linear;
 }
 
@@ -211,7 +216,7 @@
 }
 
 .card__icon-button:focus-visible {
-  border: 2px solid var(--accent-color);
+  border: 2px solid var(--accent-color, #000);
 }
 
 .section__save {
@@ -223,7 +228,9 @@
 .button-save {
   display: flex;
   align-items: center;
-  inline-size: 335px;
+  gap: 0.53rem;
+  inline-size: clamp(310px, 81.6vw, 339px);
+  block-size: clamp(55px, calc(84px - (84 - 55) * ((100vw - 375px) / (1440 - 375))), 84px);
   margin: auto;
   background-color: var(--bg-color, #fff);
   padding: 16px 20px;
@@ -237,7 +244,7 @@
   inline-size: 21px;
   block-size: 21px;
   mix-blend-mode: difference;
-  color: var(--primary-white, white);
+  color: var(--primary-white, #fff);
   z-index: 1;
 }
 
@@ -245,10 +252,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: clamp(341px, 100%, 357px);
+  max-inline-size: clamp(341px, 100%, 357px);
   border: var(--border, 2px solid #000);
   padding: 30px;
-  background-color: var(--primary-white);
+  background-color: var(--primary-white, #fff);
 }
 
 .modal::backdrop {
@@ -259,7 +266,7 @@
 .description-modal {
   display: flex;
   align-items: center;
-  gap: 19px;
+  gap: 20px;
   margin-bottom: 30px;
 }
 
@@ -268,7 +275,7 @@
   font-family: var(--accent-ffamily, fantasy);
   font-size: var(--fsize-button, 14px);
   text-transform: uppercase;
-  inline-size: 234px;
+  inline-size: clamp(198px, calc(198px + (36 * ((100vw - 375px) / 1065))), 234px);
 }
 
 .modal svg {
@@ -277,11 +284,27 @@
 }
 
 .modal__button {
+  text-transform: uppercase;
   block-size: 38px;
+  inline-size: 293px;
 }
 
 @media (width <= 375px) {
   .button-save {
       flex-direction: column;
+  }
+
+  .button-save svg {
+    inline-size: 28px;
+    block-size: 28px
+  }
+
+  .modal[open] {
+    min-inline-size: 341px;
+    padding: 30px 42px;
+  }
+
+  .modal__button {
+    inline-size: 257px;
   }
 }
